--- a/index.html
+++ b/index.html
@@ -3,237 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30-Day Chinese Learning Journey</title>
+    <title>Tashido's Journey: 30-Day Chinese HSK 3</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header class="header">
-            <div class="header-content">
-                <h1 class="title">
-                    <i class="fas fa-graduation-cap"></i>
-                    30-Day Chinese Learning Journey
+    <div class="page-wrapper">
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <h1 class="app-title">
+                    <i class="fas fa-dragon"></i>
+                    Tashido's Journey
                 </h1>
-                <p class="subtitle">Master HSK 3 vocabulary with daily interactive lessons</p>
+                <p class="app-subtitle">HSK 3 in 30 Days</p>
             </div>
-        </header>
+            <nav class="day-navigation">
+                <button class="nav-arrow" id="prevDay" aria-label="Previous Day">
+                    <i class="fas fa-arrow-left"></i>
+                </button>
+                <div class="current-day-info">
+                    <span id="currentDayDisplay">Day 1</span>
+                </div>
+                <button class="nav-arrow" id="nextDay" aria-label="Next Day">
+                    <i class="fas fa-arrow-right"></i>
+                </button>
+            </nav>
+            <div class="progress-container">
+                <div class="progress-bar-dynamic">
+                    <div class="progress-fill-dynamic" id="progressFill"></div>
+                </div>
+                <span class="progress-text" id="progressText">1/30</span>
+            </div>
+             <button class="theme-toggle-btn" id="themeToggle" aria-label="Toggle Dark Mode">
+                <i class="fas fa-sun"></i>
+                <i class="fas fa-moon" style="display:none;"></i>
+            </button>
+        </aside>
 
-        <!-- Navigation -->
-        <nav class="nav">
-            <div class="nav-content">
-                <div class="day-selector">
-                    <button class="nav-btn" id="prevDay">
-                        <i class="fas fa-chevron-left"></i>
+        <main class="main-content">
+            <header class="content-header">
+                <h2 class="lesson-title" id="dayTitle">Day 1: Family Members</h2>
+                <div class="lesson-meta">
+                    <span class="meta-item">
+                        <i class="fas fa-layer-group"></i>
+                        <span id="vocabCount">20</span> Words
+                    </span>
+                    <span class="meta-item">
+                        <i class="fas fa-file-alt"></i>
+                        <span id="sentenceCount">30</span> Sentences
+                    </span>
+                </div>
+            </header>
+
+            <section class="tabs-container">
+                <div class="tabs-nav">
+                    <button class="tab-btn active" data-tab="vocabulary" aria-selected="true">
+                        <i class="fas fa-font"></i> Vocabulary
                     </button>
-                    <div class="day-display">
-                        <span class="day-label">Day</span>
-                        <span class="day-number" id="currentDay">1</span>
-                        <span class="day-total">of 30</span>
-                    </div>
-                    <button class="nav-btn" id="nextDay">
-                        <i class="fas fa-chevron-right"></i>
+                    <button class="tab-btn" data-tab="sentences" aria-selected="false">
+                        <i class="fas fa-comment-alt"></i> Sentences
+                    </button>
+                    <button class="tab-btn" data-tab="pinyin" aria-selected="false">
+                        <i class="fas fa-microphone-alt"></i> Pinyin Guide
                     </button>
                 </div>
-                <div class="progress-bar">
-                    <div class="progress-fill" id="progressFill"></div>
-                </div>
-            </div>
-        </nav>
 
-        <!-- Main Content -->
-        <main class="main">
-            <!-- Day Title -->
-            <div class="day-header">
-                <h2 class="day-title" id="dayTitle">Day 1: Family Members</h2>
-                <div class="day-stats">
-                    <div class="stat">
-                        <i class="fas fa-book"></i>
-                        <span id="vocabCount">20</span> words
+                <div class="tab-content-area">
+                    <div class="tab-panel active" id="vocabulary" role="tabpanel" aria-labelledby="vocabulary-tab">
+                        <div class="panel-header">
+                            <h3>Daily Vocabulary List</h3>
+                            <button class="action-btn download-btn" id="downloadVocab">
+                                <i class="fas fa-cloud-download-alt"></i> Download CSV
+                            </button>
+                        </div>
+                        <div class="table-wrapper">
+                            <table class="data-table" id="vocabTable">
+                                <thead>
+                                    <tr>
+                                        <th>Pinyin</th>
+                                        <th>Simplified</th>
+                                        <th>Traditional</th>
+                                        <th>English</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="vocabTableBody">
+                                    </tbody>
+                            </table>
+                        </div>
                     </div>
-                    <div class="stat">
-                        <i class="fas fa-comments"></i>
-                        <span id="sentenceCount">30</span> sentences
-                    </div>
-                </div>
-            </div>
 
-            <!-- Tabs -->
-            <div class="tabs">
-                <button class="tab active" data-tab="vocabulary">
-                    <i class="fas fa-list"></i>
-                    Vocabulary
-                </button>
-                <button class="tab" data-tab="sentences">
-                    <i class="fas fa-comment-dots"></i>
-                    Example Sentences
-                </button>
-                <button class="tab" data-tab="pinyin">
-                    <i class="fas fa-volume-up"></i>
-                    Pinyin Guide
-                </button>
-            </div>
+                    <div class="tab-panel" id="sentences" role="tabpanel" aria-labelledby="sentences-tab">
+                        <div class="panel-header">
+                            <h3>Example Sentences</h3>
+                            <button class="action-btn download-btn" id="downloadSentences">
+                                <i class="fas fa-cloud-download-alt"></i> Download CSV
+                            </button>
+                        </div>
+                        <div class="cards-grid" id="sentencesContainer">
+                            </div>
+                    </div>
 
-            <!-- Tab Content -->
-            <div class="tab-content">
-                <!-- Vocabulary Tab -->
-                <div class="tab-panel active" id="vocabulary">
-                    <div class="section-header">
-                        <h3>Daily Vocabulary</h3>
-                        <button class="download-btn" id="downloadVocab">
-                            <i class="fas fa-download"></i>
-                            Download CSV
-                        </button>
-                    </div>
-                    <div class="table-container">
-                        <table class="vocab-table" id="vocabTable">
-                            <thead>
-                                <tr>
-                                    <th>Pinyin</th>
-                                    <th>Simplified</th>
-                                    <th>Traditional</th>
-                                    <th>English</th>
-                                    
-                                </tr>
-                            </thead>
-                            <tbody id="vocabTableBody">
-                                <!-- Vocabulary will be populated by JavaScript -->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-
-                <!-- Sentences Tab -->
-                <div class="tab-panel" id="sentences">
-                    <div class="section-header">
-                        <h3>Example Sentences</h3>
-                        <button class="download-btn" id="downloadSentences">
-                            <i class="fas fa-download"></i>
-                            Download CSV
-                        </button>
-                    </div>
-                    <div class="sentences-container" id="sentencesContainer">
-                        <!-- Sentences will be populated by JavaScript -->
-                    </div>
-                </div>
-
-                <!-- Pinyin Tab -->
-                <div class="tab-panel" id="pinyin">
-                    <div class="section-header">
-                        <h3>Pinyin Reference Guide</h3>
-                    </div>
-                    <div class="pinyin-guide">
-                        <div class="pinyin-section">
-                            <h4>Tones</h4>
-                            <div class="tone-grid">
-                                <div class="tone-card">
-                                    <div class="tone-symbol">ā</div>
-                                    <div class="tone-name">First Tone</div>
-                                    <div class="tone-desc">High level tone</div>
-                                </div>
-                                <div class="tone-card">
-                                    <div class="tone-symbol">á</div>
-                                    <div class="tone-name">Second Tone</div>
-                                    <div class="tone-desc">Rising tone</div>
-                                </div>
-                                <div class="tone-card">
-                                    <div class="tone-symbol">ǎ</div>
-                                    <div class="tone-name">Third Tone</div>
-                                    <div class="tone-desc">Falling-rising tone</div>
-                                </div>
-                                <div class="tone-card">
-                                    <div class="tone-symbol">à</div>
-                                    <div class="tone-name">Fourth Tone</div>
-                                    <div class="tone-desc">Falling tone</div>
+                    <div class="tab-panel" id="pinyin" role="tabpanel" aria-labelledby="pinyin-tab">
+                         <div class="panel-header">
+                            <h3>Pinyin Reference</h3>
+                        </div>
+                        <div class="pinyin-guide-content">
+                            <div class="pinyin-section">
+                                <h4>Tones</h4>
+                                <div class="tones-showcase">
+                                    <div class="tone-info-card"><span>ā</span> First (High)</div>
+                                    <div class="tone-info-card"><span>á</span> Second (Rising)</div>
+                                    <div class="tone-info-card"><span>ǎ</span> Third (Fall-Rise)</div>
+                                    <div class="tone-info-card"><span>à</span> Fourth (Falling)</div>
+                                    <div class="tone-info-card"><span>a</span> Neutral (Light)</div>
                                 </div>
                             </div>
-                        </div>
-                        
-                        <div class="pinyin-section">
-                            <h4>Common Initials</h4>
-                            <div class="pinyin-table">
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">b</span>
-                                    <span class="pinyin-char">p</span>
-                                    <span class="pinyin-char">m</span>
-                                    <span class="pinyin-char">f</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">d</span>
-                                    <span class="pinyin-char">t</span>
-                                    <span class="pinyin-char">n</span>
-                                    <span class="pinyin-char">l</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">g</span>
-                                    <span class="pinyin-char">k</span>
-                                    <span class="pinyin-char">h</span>
-                                    <span class="pinyin-char">j</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">q</span>
-                                    <span class="pinyin-char">x</span>
-                                    <span class="pinyin-char">zh</span>
-                                    <span class="pinyin-char">ch</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">sh</span>
-                                    <span class="pinyin-char">r</span>
-                                    <span class="pinyin-char">z</span>
-                                    <span class="pinyin-char">c</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">s</span>
-                                    <span class="pinyin-char">y</span>
-                                    <span class="pinyin-char">w</span>
+                            <div class="pinyin-section">
+                                <h4>Common Initials</h4>
+                                <div class="pinyin-grid">
+                                    <span>b</span><span>p</span><span>m</span><span>f</span><span>d</span><span>t</span><span>n</span><span>l</span><span>g</span><span>k</span><span>h</span><span>j</span><span>q</span><span>x</span><span>zh</span><span>ch</span><span>sh</span><span>r</span><span>z</span><span>c</span><span>s</span><span>y</span><span>w</span>
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="pinyin-section">
-                            <h4>Common Finals</h4>
-                            <div class="pinyin-table">
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">a</span>
-                                    <span class="pinyin-char">o</span>
-                                    <span class="pinyin-char">e</span>
-                                    <span class="pinyin-char">i</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">u</span>
-                                    <span class="pinyin-char">ü</span>
-                                    <span class="pinyin-char">ai</span>
-                                    <span class="pinyin-char">ei</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">ao</span>
-                                    <span class="pinyin-char">ou</span>
-                                    <span class="pinyin-char">an</span>
-                                    <span class="pinyin-char">en</span>
-                                </div>
-                                <div class="pinyin-row">
-                                    <span class="pinyin-char">ang</span>
-                                    <span class="pinyin-char">eng</span>
-                                    <span class="pinyin-char">ong</span>
-                                    <span class="pinyin-char">er</span>
+                            <div class="pinyin-section">
+                                <h4>Common Finals</h4>
+                                 <div class="pinyin-grid">
+                                    <span>a</span><span>o</span><span>e</span><span>i</span><span>u</span><span>ü</span><span>ai</span><span>ei</span><span>ui</span><span>ao</span><span>ou</span><span>iu</span><span>ie</span><span>üe</span><span>er</span><span>an</span><span>en</span><span>in</span><span>un</span><span>ün</span><span>ang</span><span>eng</span><span>ing</span><span>ong</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="footer-content">
-                <p>&copy; 2024 Chinese Learning Journey. Designed for HSK 3 preparation.</p>
-            </div>
-        </footer>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
