--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tashido's Journey: 30-Day Chinese HSK 3</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="httpshttps://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -87,6 +87,7 @@
                                         <th>Simplified</th>
                                         <th>Traditional</th>
                                         <th>English</th>
+                                        <th>Listen</th>
                                     </tr>
                                 </thead>
                                 <tbody id="vocabTableBody">
